--- a/.github/ISSUE_TEMPLATE/01-bug.yml
+++ b/.github/ISSUE_TEMPLATE/01-bug.yml
@@ -1,8 +1,7 @@
 name: "Reporte de Bug"
 description: "Usa esta plantilla para reportar un error en la aplicación"
-title: "[BUG] Descripción breve del problema"
-labels:
-  - bug
+title: "[Bug]: "
+labels: ["bug"]
 body:
   - type: markdown
     attributes:
@@ -36,15 +35,14 @@ body:
     validations:
       required: true
 
-
   - type: input
     id: actual-behavior
     attributes:
       label: "Comportamiento actual"
       description: "Describe qué es lo que está ocurriendo realmente"
       placeholder: "Describe el comportamiento actual"
-      validations:
-        required: true
+    validations:
+      required: true
 
   - type: textarea
     id: additional-info
@@ -52,5 +50,5 @@ body:
       label: "Información adicional"
       description: "Agrega cualquier otra información que pueda ser útil"
       placeholder: "Escribe aquí información relevante adicional"
-      validations:
-        required: true
+    validations:
+      required: true
