docs(template): Se corrigio la plantilla la palabra feature

--- a/.github/ISSUE_TEMPLATE/02-feature-pull-request.yml
+++ b/.github/ISSUE_TEMPLATE/02-feature-pull-request.yml
@@ -3,7 +3,7 @@
 name: "Nueva Característica, Módulo, Función"
 description: "Sugerencia de una nueva funcionalidad en el módulo de compras"
 title: "[Feature]: "
-labels: ["feature request"]
+labels: ["feature"]
 
 # Cuerpo de la estructura YAML
 body:
